# ovtp

./: LICENSE.txt  README.md  requirements.txt  setup.cfg
overengine_client/: __init__.py  __main__.py  overengine_client.py
overengine_server/: __init__.py  __main__.py  overengine_server.py
overengine_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ovtp/: __main__.py
ovtp/client/: __init__.py  config.py  main.py  ovtp_client.py
ovtp/server/: __init__.py  add_auth_keys.py  config.py  keys_conv.py  main.py  ovtp_server.py  saved_key.py
ovtp/server/func/: __init__.py  check_key.py
