[metadata]
name = overengine_client
version = 0.4.0
author = Dmitry Yakovlev
author_email = info@overhosting.ru
description = Overengine Client
licence = Copyright Overhosting.ru
url = 

[options]
python_requires = >=3.7
packages=find:
install_requires =
    rsa
    ovcrypt @ git+http://148.251.8.52/d/git/ovcrypt.git
    oe_common
    oe_aes_cipher @ git+http://148.251.8.52/d/git/oe_aes_cipher.git
    ovcfg
