[metadata]
name = ovtp
version = 1.0.6.2
author = Dmitry Yakovlev
author_email = info@overhosting.ru
description = Over Transfer Protocol
long_description = file: README.md, LICENSE.txt
long_description_content_type= text/markdown
licence = MIT
url =

[options]
python_requires = >=3.7
packages=find:
install_requires =
    rsa
    ovcrypt
    oe_common
    ov_aes_cipher
    ovcfg
